--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,8 +29,11 @@ jobs:
 
     - name: Install VHS dependencies
       run: |
-        sudo apt update 
-        sudo apt install -y ttyd ffmpeg
+        sudo apt update
+        sudo apt install -y ffmpeg
+        wget https://github.com/tsl0922/ttyd/releases/download/1.7.2/ttyd_linux.x86_64 -O ttyd
+        sudo chmod +x ttyd
+        sudo mv ttyd /usr/local/bin/
     - name: Install VHS
       run: |
         wget https://github.com/charmbracelet/vhs/releases/download/v0.8.0/vhs_0.8.0_amd64.deb
