--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,19 +22,10 @@ jobs:
         run: go build -o ./termpicker -v ./cmd/termpicker
       - name: Test
         run: go test -v ./...
-      - name: Install VHS dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y ffmpeg zsh
-          wget https://github.com/tsl0922/ttyd/releases/download/1.7.7/ttyd.x86_64
-          sudo chmod +x ttyd.x86_64
-          sudo mv ttyd.x86_64 /usr/local/bin/ttyd
-      - name: Install VHS
-        run: |
-          wget https://github.com/charmbracelet/vhs/releases/download/v0.8.0/vhs_0.8.0_amd64.deb
-          sudo dpkg -i vhs_0.8.0_amd64.deb
-      - name: Generate Demo GIF
-        run: vhs ./assets/demo.tape
+      - name: VHS Gif update
+        uses: charmbracelet/vhs-action@v1
+        with:
+          path: assets/demo.tape
       - name: Commit and push updated GIF demo
         run: |-
           git config --global user.name 'github-actions'
