--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,44 +1,38 @@
+---
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
 version: 2
 before:
-  hooks:
-    - go mod tidy
-
+  hooks: [go mod tidy]
 gomod:
   proxy: true
-
 builds:
-  - env: ["CGO_ENABLED=0"]
-    mod_timestamp: "{{ .CommitTimestamp }}"
-    flags: ["-trimpath"]
-    targets: ["go_first_class"]
-
+  - env: [CGO_ENABLED=0]
+    mod_timestamp: '{{ .CommitTimestamp }}'
+    flags: [-trimpath]
+    targets: [go_first_class]
 changelog:
   sort: asc
   use: github
   filters:
     exclude:
-      - "^docs:"
-      - "^test:"
-      - "^chore"
+      - '^docs:'
+      - '^test:'
+      - ^chore
       - Merge pull request
       - Merge remote-tracking branch
       - Merge branch
       - go mod tidy
   groups:
-    - title: "New Features"
-      regexp: "^.*feat[(\\w)]*:+.*$"
+    - title: New Features
+      regexp: ^.*feat[(\w)]*:+.*$
       order: 0
-    - title: "Bug fixes"
-      regexp: "^.*fix[(\\w)]*:+.*$"
+    - title: Bug fixes
+      regexp: ^.*fix[(\w)]*:+.*$
       order: 10
     - title: Other work
       order: 999
-
 release:
-  footer: |
-
+  footer: |4-
     ---
-
     _Released with [GoReleaser](https://goreleaser.com)!_
