Fix syntax error in .goreleaser.yml

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,6 +33,6 @@ changelog:
     - title: Other work
       order: 999
 release:
-  footer: |4-
+  footer: |-
     ---
     _Released with [GoReleaser](https://goreleaser.com)!_
