Move main.go to root for easy go install ...

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -10,7 +10,7 @@ version: 2
 before:
   hooks: [go mod tidy]
 builds:
-  - main: ./cmd/termpicker/
+  - main:
     env: [CGO_ENABLED=0]
     goos: [linux, windows, darwin]
 archives:
