--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,6 +12,7 @@ before:
 builds:
   - main:
     env: [CGO_ENABLED=0]
+    ldflags: -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
     goos: [linux, windows, darwin]
 archives:
   - format: tar.gz
