--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -21,7 +21,7 @@ jobs:
           GIT_USER: ChausseBenjamin
         run: |-
           docker buildx create --use
-          docker buildx build -t "aur-publisher" releases/aur
+          docker buildx build -t "aur-publisher" releases/aur --load
           docker run \
             -e AUR_PRIVATE_KEY="$AUR_PRIVATE_KEY" \
             -e AUR_PUBLIC_KEY="$AUR_PUBLIC_KEY" \
